CMS7-7550: Improvement on CMS7 - 7535: The last item checkbox in the referring documents dialog can not be activated  - Added marker className to doclisting-name column  - Added 100% width to the header of the doclisting-name column to ensure it is always the same width. If we leave this out, the first column containing the checkbox will take more width than intended if there is no document name that overflows the doclisting-name cells.  - Set width of 'tr.hippo-list-paging td' to be 75em which forces the paging widget to always align completely to the right, even in the big dialog of the 'Schedule take offline...' action.

--- a/skin/src/main/resources/skin/screen.css
+++ b/skin/src/main/resources/skin/screen.css
@@ -553,7 +553,7 @@ body.hippo-root #doc3 {
 }
 
 .hippo-list-details tr.hippo-list-paging td {
-  width: 630px;
+  width: 75em;
   text-align: right;
 }
 
@@ -2210,4 +2210,14 @@ body.hippo-root div.yui-log-container {
 	color: red;
 	font-size: 14px;
 	font-weight: bold;
+}
+
+.hippo-referring-documents-list th.doclisting-name {
+    width: 100%;
+}
+
+.hippo-referring-documents-list td.doclisting-name span.ie-fallback-marker {
+    display: block;
+    height: 14px;
+    overflow: hidden;
 }
